--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -19,8 +19,7 @@ a{
 }
 /* PRINCIPAL */
 .corpo {
-    width: 100%;
-    height: 180px;
+    width: 50%;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -38,7 +37,7 @@ a{
 article {
     display: inline-grid;
     margin-bottom: 20px;
-    padding: 0% 1%;
+    padding: 0% 2%;
 }
 
 article:hover {
@@ -57,14 +56,6 @@ textarea {
     padding: 20px;
 }
 
-#cep {
-    width: 6%;
-}
-
-#cep2 {
-    width: 5%;
-}
-
 .btn {
     border-radius: 12px;
     width: 330px;
@@ -80,7 +71,7 @@ textarea,
 input[type="text"],
 input[type="datetime-local"],
 input[type="search"],
-input[type="number"] {
+input[type="number"], select {
     border: 2px #cccccc solid;
     border-radius: 10px;
     padding: 0 20px;
@@ -90,7 +81,7 @@ input[type="text"],
 input[type="datetime-local"],
 button[type="submit"],
 input[type="search"],
-input[type="number"] {
+input[type="number"], select {
     height: 32px;
     font-family: Tahoma;
     font-size: 14px;
@@ -100,7 +91,7 @@ textarea:hover,
 input[type="text"]:hover,
 input[type="datetime-local"]:hover,
 input[type="search"]:hover,
-input[type="number"]:hover {
+input[type="number"]:hover, select:hover {
     background-color: #ddddff;
 }
 
@@ -108,7 +99,7 @@ textarea:focus,
 input[type="text"]:focus,
 input[type="datetime-local"]:focus,
 input[type="search"]:focus,
-input[type="number"]:focus {
+input[type="number"]:focus, select:focus {
     background: #ffcccc;
 }
 
